force-app/main/default/objects/GL_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>G_L_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>