force-app/main/default/objects/GL_Account__c/fields/Account_Type2__c.field-meta.xml
<CustomField>
    <fullName>Account_Type2__c</fullName>
    <label>Type2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Liabilities</fullName>
            </value>
            <value>
                <fullName>Owners Equity</fullName>
            </value>
            <value>
                <fullName>Product Revenue</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Service Revenue</fullName>
            </value>
            <value>
                <fullName>General &amp; Administrative</fullName>
            </value>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Investing</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>